--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-git+https://github.com/Theano/Theano.git
-git+https://github.com/basveeling/keras.git@wavenet#egg=keras
+theano~=0.9b1
+keras~=1.2.1
 picklable_itertools~=0.1.1
 sacred~=0.6.10
 h5py~=2.6.0
